bitfields/tests/compile_error_cases/errors/bitfield_field_negative_default_bigger_than_i128.rs
use bitfields::bitfield;

#[bitfield(u32)]
pub struct Bitfield {
    #[bits(default = -340282366920938463463374607431768211456)]
    a: i32,
}

fn main() {}
