bitfields/tests/compile_error_cases/errors/bitfield_field_negative_default_bigger_than_i128.stderr
error: integer literal is too large
 --> tests/compile_error_cases/errors/bitfield_field_negative_default_bigger_than_i128.rs:3:1
  |
3 | #[bitfield(u32)]
  | ^^^^^^^^^^^^^^^^
  |
  = note: value exceeds limit of `340282366920938463463374607431768211455`
  = note: this error originates in the attribute macro `bitfield` (in Nightly builds, run with -Z macro-backtrace for more info)
